--- a/man/opusenc.1
+++ b/man/opusenc.1
@@ -63,6 +63,9 @@ opusenc \- encode audio into the Opus format
 .B --picture
 .IB filename | specification
 ] [
+.B --metadata-file
+.I filename
+] [
 .B --padding
 .I n
 ] [
@@ -294,6 +297,24 @@ these are checked against the file for accuracy.
 is the path to the picture file to be imported, or the URL if the
 .I media-type
 is "-->".
+.IP "--metadata-file filename"
+File with additional medatada.  This may be used multiple times.
+
+The file should be an UTF-8 encoded text file with UNIX line endings.  It can
+contain single and multiline values.  The single line values must be in the form
+"tag=value" and multiline ones in the form "tag=\\n\\tline1\\n\\tline2".
+For example:
+
+.RS 10
+ TITLE=Example Title
+ ARTIST=John
+ DESCRIPTION=
+         Book
+         
+         something
+         something
+.RE
+
 .IP "--padding n"
 Reserve
 .I n
